log
Thu Mar 17 11:29:56 -03 2022: 
 tests:  0|6
total_score: 0/70
10fa342
Thu Mar 17 11:32:59 -03 2022: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7654155
Thu Mar 17 11:37:04 -03 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c4938cd
Thu Mar 17 11:38:41 -03 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
daf707d
Thu Mar 17 11:40:39 -03 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c51600
Thu Mar 17 11:42:03 -03 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9e0c29e
Thu Mar 17 11:46:17 -03 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
66c91b1
Thu Mar 17 11:47:38 -03 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0

b5c0eca
Thu Mar 17 11:48:10 -03 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
c5939e9
Thu Mar 17 11:48:27 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0

cbeaae9
Thu Mar 17 11:49:15 -03 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
cfdd2e7
Thu Mar 17 11:49:58 -03 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
1c1e315
Thu Mar 17 11:50:18 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
4ab1ae9
Thu Mar 17 11:51:33 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a2a7858
Thu Mar 17 11:51:53 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0

31b8d28
Thu Mar 17 11:52:46 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
9a2e040
Thu Mar 17 11:53:24 -03 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0

451a2c5
Thu Mar 17 11:53:47 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0

0efb1f1
Thu Mar 17 11:54:00 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f673355
Thu Mar 17 11:55:33 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
84f362f
Thu Mar 17 11:56:28 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0

5e359c3
Thu Mar 17 11:56:34 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
6e11f08
Thu Mar 17 12:00:33 -03 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
9fe6d06
Thu Mar 17 12:01:50 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0

af52aee
Thu Mar 17 12:05:07 -03 2022: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
ce1718a
Thu Mar 17 12:06:03 -03 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
0414209
Thu Mar 17 12:06:24 -03 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
9dbca70
Thu Mar 17 12:06:42 -03 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|3
total_score: 35/70
2a1f97e
Thu Mar 17 12:07:24 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 35/70
ade3104
Thu Mar 17 12:09:17 -03 2022: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  7|3
total_score: 35/70
b5f45c7
Thu Mar 17 12:09:50 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0

a44a20d
Thu Mar 17 12:10:02 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|0
   [ INFO ] llamando a prevListdfc80aa
Thu Mar 17 12:10:13 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0

e383d4a
Thu Mar 17 12:10:49 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 35/70
6045bb3
Thu Mar 17 12:11:21 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0

f939de1
Thu Mar 17 12:11:37 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
654e945
Thu Mar 17 12:14:12 -03 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  8|0
   [ INFO ] llamando a prevList0fbd914
Thu Mar 17 12:14:45 -03 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d6dd635
Thu Mar 17 12:17:34 -03 2022: 
 list.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:71:8: error: variable 'tmp' set but not used [-Werror=unused-but-set-variable]
   71 |  Node *tmp = NULL;
      |        ^~~
list.c:70:8: error: unused variable 'new' [-Werror=unused-variable]
   70 |  Node *new = createNode(data);
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
6553180
Thu Mar 17 12:19:23 -03 2022: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
b267f89
Thu Mar 17 12:19:40 -03 2022: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:81:2: error: expected '(' before '}' token
   81 |  }
      |  ^
      |  (
list.c: At top level:
list.c:83:1: error: expected identifier or '(' before '}' token
   83 | }
      | ^
Compilation failed
a35316a
Thu Mar 17 12:19:51 -03 2022: 
 list.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  9|3
total_score: 35/70
63b15e5
Thu Mar 17 12:20:34 -03 2022: 
 list.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:79:2: error: expected '(' before '}' token
   79 |  }
      |  ^
      |  (
list.c: At top level:
list.c:81:1: error: expected identifier or '(' before '}' token
   81 | }
      | ^
list.c: In function 'pushBack':
list.c:87:2: error: 'tmp' undeclared (first use in this function); did you mean 'tm'?
   87 |  tmp->next->prev = new;
      |  ^~~
      |  tm
list.c:87:2: note: each undeclared identifier is reported only once for each function it appears in
list.c:87:20: error: 'new' undeclared (first use in this function)
   87 |  tmp->next->prev = new;
      |                    ^~~
Compilation failed
a24244e
Thu Mar 17 12:20:43 -03 2022: 
 list.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  9|3
total_score: 35/70
93b2a9b
Thu Mar 17 21:26:47 -03 2022: 
 tests:  9|3
total_score: 35/70
fcdee8a
Thu Mar 17 21:33:24 -03 2022: 
 list.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:70:15: error: unused variable 'new' [-Werror=unused-variable]
   70 |         Node *new = createNode(data);
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
683f772
Thu Mar 17 21:43:19 -03 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4b62d2d
Thu Mar 17 21:44:46 -03 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
8a14255
Thu Mar 17 21:44:58 -03 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
d5cbc43
Thu Mar 17 21:47:05 -03 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
18ef6fa
